# holamundo-pyside6

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: conf.py
src/holamundo/: holamundo.py
